--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "13.4.9",
+    "puppeteer": "^20.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
