--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mathjs": "^11.8.2",
     "next": "13.4.9",
     "puppeteer": "^20.8.2",
     "react": "18.2.0",
