--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chrome-aws-lambda": "^10.1.0",
     "cron": "^2.3.1",
     "mathjs": "^11.8.2",
     "next": "13.4.9",
