--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cron": "^2.3.1",
+    "ioredis": "^5.3.2",
     "mathjs": "^11.8.2",
     "next": "13.4.9",
     "puppeteer": "^20.8.3",
