--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "CI=false npm run build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -15,6 +15,8 @@
     "next": "13.4.9",
     "puppeteer": "^20.8.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
-  }
+    "react-dom": "18.2.0",
+    "serve": "^14.2.0"
+  },
+  "start": "serve build -s -n -L -p $PORT"
 }
