--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "next": "13.4.9",
     "puppeteer": "^20.8.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "serve": "^14.2.0"
-  },
-  "start": "serve build -s -n -L -p $PORT"
+    "react-dom": "18.2.0"
+  }
 }
