--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.0",
     "cron": "^2.3.1",
     "mathjs": "^11.8.2",
     "next": "13.4.9",
     "puppeteer": "^20.8.3",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0"
   }
 }
