--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cron": "^3.1.6",
     "crypto-js": "^4.2.0",
     "next": "14.0.4",
     "puppeteer": "^21.6.1",
