--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "cron": "^3.1.6",
     "crypto-js": "^4.2.0",
-    "next": "14.0.4",
-    "puppeteer": "^21.6.1",
+    "next": "^14.2.18",
+    "puppeteer": "^23.9.0",
     "react": "^18",
     "react-dom": "^18"
   },
