--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "^14.2.18",
     "puppeteer": "^23.9.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.1",
