--- a/package.json
+++ b/package.json
@@ -9,24 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "cron": "^3.1.6",
+    "cron": "^3.5.0",
     "crypto-js": "^4.2.0",
-    "next": "^14.2.18",
-    "puppeteer": "^23.9.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "ws": "^8.18.0"
+    "next": "^15.1.4",
+    "puppeteer": "^24.1.0",
+    "react": "^19",
+    "react-dom": "^19"
   },
   "devDependencies": {
-    "@types/crypto-js": "^4.2.1",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "@types/crypto-js": "^4.2.2",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.4",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
