--- a/fix/package.json
+++ b/fix/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cron": "^3.5.0",
     "next": "15.1.6",
     "puppeteer": "^24.2.0",
     "react": "^19.0.0",
